--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 * /querylog parameters for more complex log fetching.
 * parental, safesearch, safebrowsing support
 * stats, blocked services support
+* TUI?
