--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 * add /filtering/check_host and /filtering/refresh support
-* /querylog parameters for more complex log fetching.
 * parental, safesearch, safebrowsing support
 * stats, blocked services support
 * TUI?
 
 * debug flag
 * verbose - similar to debug.
+* use swagger api generated code?
