--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,6 @@
 * debug flag
 * verbose - similar to debug.
 * use swagger api generated code?
+* go over all method and data structure names and clean them up
+
+
