--- a/TODO.txt
+++ b/TODO.txt
@@ -1,35 +1,10 @@
 
 * parental, safesearch, safebrowsing support
-* stats, blocked services support (/blocked_services/update)
+* tests of all the blocking and unblocking.
+
 
 * TUI?
 
 * debug flag
 * verbose - similar to debug.
-* use swagger api generated code?
 * go over all method and data structure and command names and clean them up
-
-
-
-
-service blocking cli
-
-
-adctl service {block <name> |unblock <name> |listBlocked|listAll}
-
-functions
-
-blockService calls the POST endpoint to block a service
-ditto unblockService (maybe same function with a toggle?)
-listAllServices is a pretty basic thing I need anyways so keep it separate
-listBlockedServices does what it says
-
-same division: command -> print -> execute
-
-maybe <name> is a csv of names?
-  adctl service block <yy,yt,zz> 
-  
-
-
-
-
