--- a/TODO.txt
+++ b/TODO.txt
@@ -8,8 +8,5 @@
 * debug flag
 * verbose - similar to debug.
 * go over all method and data structure and command names and clean them up
-<<<<<<< HEAD
-
 * add a test for missing args on getlogs since that caused a crash
-=======
->>>>>>> services
+* 'adctl service update' with no parameters should do something or say something.
