--- a/TODO.txt
+++ b/TODO.txt
@@ -10,3 +10,15 @@
 * go over all method and data structure and command names and clean them up
 * add a test for missing args on getlogs since that caused a crash
 * 'adctl service update' with no parameters should do something or say something.
+
+
+
+1. clean up all commands to conform to the structure like new ones - no passing args[] or cmd.
+ * done.
+
+
+
+2. tighten up cli keywords, make them clean and obvious.
+3. tests
+4. debugs and verbosity
+5. general code tidiness.
