--- a/TODO.txt
+++ b/TODO.txt
@@ -18,6 +18,32 @@
 
 2. tighten up cli keywords, make them clean and obvious.
 
+new cli
+noun verb
+	filter*
+		check**
+	status*
+		disable*
+		enable*
+		toggle*
+    get*
+	log  
+		get << this seems vague >> **done anyways ***
+	services*
+	 'services' because this is not about stopping the whole service, it's about toggling specific web properties.
+	 
+	 what does the api call it?
+	 
+	 is there a better word than 'services" or 'service'?
+		list*
+			all*
+			blocked*
+		update*
+			keep --block and --permit so I can do both at once?
+			yeah, that seems cleaner
+
+
+
 Commands represent actions, Args are things and Flags are modifiers for those actions.
 The pattern to follow is APPNAME VERB NOUN --ADJECTIVE. or APPNAME COMMAND ARG --FLAG
 https://clig.dev/
