--- a/TODO.txt
+++ b/TODO.txt
@@ -26,6 +26,7 @@
 5. general code tidiness.
 
 
+    * github actions to build releases
     * use logging not printfs
     * change all printfs to json with flags for text and gron.
     * logging and print to stderr if I need to do any?
