--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,8 @@
 
 * parental, safesearch, safebrowsing support
-* merge all of the subcommand files into one
-  service, service_list, etc..  getting too messy.
 * add contexts to stuff?  
 
-** fix build tool pathing so I don't have to do qinstall before every test!!!
-
+* auto-update mermaid picture as part of build or deploy?
 
 * TUI?
 
